# Screenshot

./: README.md  pyproject.toml  requirements.txt  tmp_review.db
data/: monitor.db
src/desktop_monitor/: main.py
src/desktop_monitor/core/: contracts.py  image_adjustments.py  pipeline.py  structured_extraction.py
src/desktop_monitor/domain/: models.py
src/desktop_monitor/infra/capture/: window_capture.py
src/desktop_monitor/infra/db/: repository.py
src/desktop_monitor/infra/llm/: openai_gateway_client.py
src/desktop_monitor/infra/window/: window_service.py
src/desktop_monitor/ui/: main_window.py  monitor_worker.py  preview_editor.py  style.py
src/desktop_monitor/utils/: config_store.py
